--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
+  flutter_bloc: ^8.0.1
+  freezed_annotation: ^1.1.0
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +50,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.7
+  freezed: ^1.1.1
+  json_serializable: ^6.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
